--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -36,7 +36,9 @@
         </ul>
         <a class="nav-link" href="{{ url_for('main.general') }}" style="margin-right: 30px;"><img src="static/images/home_ico.png" alt="#" /></a>
     </nav>
+
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
 
         {% block body %}
         {% endblock %}
@@ -53,7 +55,7 @@
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    
 </body>
 
 </html>
